# bigdata-poc

./: README.md
entry-level-tests/: 010010-99999-2013.txt  command-list.txt  download-raw-files.sh  max-temperature.awk  minimal-cluster.txt
entry-level-tests/cluster-config/: README
entry-level-tests/cluster-config/hadoop-1.1.2/home/hadoop/etc/: core-site.xml  hdfs-site.xml  slaves
entry-level-tests/cluster-config/hadoop-2.0.4-alpha/home/hadoop/etc/: yarn-env.sh
entry-level-tests/clusters/: README  minimal-pseudodistributed.txt
entry-level-tests/clusters/hadoop-1.1.2/etc/: hadoop-env.sh
entry-level-tests/clusters/hadoop-2.0.4-alpha/puppet/: puppet.conf
entry-level-tests/clusters/hadoop-2.0.4-alpha/puppet/manifests/: nodes.pp  site.pp
entry-level-tests/cpp/: max_temperature  max_temperature.cpp  max_temperature.xml  run.sh
entry-level-tests/interface-api-java/: CMakeLists.txt  run.sh
entry-level-tests/interface-api-java/FileWrite/: CMakeLists.txt  run.sh
entry-level-tests/interface-api-java/FileWrite/src/: FileCopyWithProgress.java
entry-level-tests/interface-api-java/URLCat/: CMakeLists.txt  README  run.sh
entry-level-tests/interface-api-java/URLCat/src/: FileSystemCat.java  URLCat.java
entry-level-tests/interface-api-java/src/: URLCat.java
entry-level-tests/java/: CMakeLists.txt
entry-level-tests/java/src/: MaxTemperature.java
entry-level-tests/python/: map-function.py  reduce-function.py  run.sh
entry-level-tests/yarn/: CMakeLists.txt  README  run.sh
entry-level-tests/yarn/src/: MaxTemperatureMapper.java  MaxTemperatureReducer.java
(+17 files in other folders)
